BEAM-3533 - Replace hard-coded UTF-8 Strings.  - Also replaced a few new Long/new Integer calls with "valueOf" instead.